Fixed app header menu dropdown on mobile so that it appears over jquery select2.

--- a/app/assets/stylesheets/components/appHeader.scss
+++ b/app/assets/stylesheets/components/appHeader.scss
@@ -71,6 +71,7 @@
       padding: 12px 30px;
       font-size: 2.0rem;
       font-weight: 400;
+      z-index: 10;
 
       @media (min-width: $width-show-navigation) {
         padding: 0;
